# rust_template

./: .env  Cargo.toml  Dockerfile.dev  Makefile  README.md  docker-compose.yml
src/: main.rs
