[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "1.0.69"
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
async-trait = "0.1.64"
chrono = "0.4.23"
dotenv = "0.15.0"
once_cell = "1.17.1"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = "1.26.0"
